--- a/AppRecetas/src/app/pages/auth/login/login.page.html
+++ b/AppRecetas/src/app/pages/auth/login/login.page.html
@@ -1,13 +1,24 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Iniciar sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="login-container">
+    <ion-item>
+      <ion-label position="floating">Correo electrónico</ion-label>
+      <ion-input type="email" [(ngModel)]="email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+
+    <ion-button expand="full" (click)="login()">Iniciar sesión</ion-button>
+    <ion-button expand="full" (click)="onBack()">Volver</ion-button>
+
+    <ion-text color="danger" *ngIf="errorMessage">{{ errorMessage }}</ion-text>
+  </div>
 </ion-content>
