--- a/AppRecetas/src/app/pages/auth/login/login.page.scss
+++ b/AppRecetas/src/app/pages/auth/login/login.page.scss
@@ -1,28 +1,46 @@
-.login-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 400px; /* Limita el ancho */
-    margin: 0 auto; /* Centra el contenedor */
-    padding: 20px; /* Espaciado interno */
-    background-color:#676767;
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
-  
-    ion-item {
-      width: 100%; /* Asegura que los campos ocupen todo el ancho */
-      margin-bottom: 15px; /* Espacio entre los campos */
-    }
-  
-    ion-button {
-      width: 100%; /* Botón de ancho completo */
-      margin-top: 10px; /* Espacio sobre el botón */
-    }
-  
-    ion-text {
-      margin-top: 10px; /* Espacio sobre el texto de error */
-      text-align: center;
-    }
+.register-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; // Ocupa toda la pantalla
+}
+
+.register-form {
+  width: 100%;
+  max-width: 400px; // Tamaño máximo del contenedor
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); // Sombra suave
+  border-radius: 8px;
+  background-color: #676767; // Fondo gris oscuro
+
+  ion-item {
+    margin-bottom: 15px; // Espaciado entre los campos
   }
-  
+
+  ion-label {
+    --color: #fff; // Etiquetas blancas
+  }
+
+  ion-text {
+    margin-top: 10px;
+    font-size: 0.9rem;
+    text-align: center;
+    display: block;
+  }
+
+  ion-button {
+    margin-top: 10px;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+
+    ion-button {
+        flex: 1;
+        /* Ambos botones ocupan el mismo ancho */
+        margin: 0 5px;
+        /* Espaciado entre botones */
+    }
+}
+}
