--- a/AppRecetas/src/app/pages/auth/register/register.page.scss
+++ b/AppRecetas/src/app/pages/auth/register/register.page.scss
@@ -31,4 +31,12 @@
             /* Espaciado entre botones */
         }
     }
+
+    .verify {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+
+    }
 }
