--- a/AppRecetas/src/app/pages/crear-receta/crear-receta.page.html
+++ b/AppRecetas/src/app/pages/crear-receta/crear-receta.page.html
@@ -14,10 +14,7 @@
 
       <ion-item>
         <ion-label position="stacked">Descripción</ion-label>
-        <ion-textarea
-          formControlName="descripcion"
-          placeholder="Describe la receta"
-        ></ion-textarea>
+        <ion-textarea formControlName="descripcion" placeholder="Describe la receta"></ion-textarea>
       </ion-item>
 
       <ion-item>
@@ -31,17 +28,14 @@
 
       <ion-item>
         <ion-label position="stacked">Tiempo de Preparación (minutos)</ion-label>
-        <ion-input
-          formControlName="tiempoPreparacion"
-          type="number"
-          placeholder="Tiempo en minutos"
-        ></ion-input>
+        <ion-input formControlName="tiempoPreparacion" type="number" placeholder="Tiempo en minutos"></ion-input>
       </ion-item>
 
       <ion-button expand="block" type="submit" [disabled]="!recipeForm.valid">
         Guardar Receta
       </ion-button>
+      <ion-button expand="full" routerLink="/recipe-list">Volver</ion-button>
     </form>
-    <ion-button expand="full" routerLink="/recipe-list">Volver</ion-button>
+
   </div>
 </ion-content>
