--- a/AppRecetas/src/app/pages/recipe-list/recipe-list.page.html
+++ b/AppRecetas/src/app/pages/recipe-list/recipe-list.page.html
@@ -5,6 +5,10 @@
 </ion-header>
 
 <ion-content>
+  <ion-button expand="block" (click)="recargarRecetas()">
+    Refrescar recetas
+  </ion-button>
+  <ion-spinner *ngIf="recetas.length === 0"></ion-spinner>
   <ion-list>
     <ion-card *ngFor="let receta of recetas">
       <ion-card-header>
