--- a/AppRecetas/src/app/pages/home/home.page.html
+++ b/AppRecetas/src/app/pages/home/home.page.html
@@ -1,22 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      AppRecetas
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
-
-  <div id="container" > 
+  <div id="container" class="background">
     <ion-card>
-
-
-      <ion-card-content >
-        <ion-button class="log" shape="round" color="secondary" routerLink="/login">Iniciar sesion</ion-button> 
-        <ion-button class="log" shape="round" color="secondary" routerLink="/register">Registrar sesion</ion-button>                 
+      <ion-card-content>
+        <ion-button class="log" shape="round" color="primary" routerLink="/login">Iniciar sesión</ion-button>
+        <ion-button class="log" shape="round" color="secondary" routerLink="/register">Registrar sesión</ion-button>
       </ion-card-content>
-
     </ion-card>
   </div>
 </ion-content>
+
