--- a/AppRecetas/src/app/pages/recipe-list/recipe-list.page.scss
+++ b/AppRecetas/src/app/pages/recipe-list/recipe-list.page.scss
@@ -1,14 +1,59 @@
+ion-content {
+  --background: url('../../../assets/img/img-comida.avif') no-repeat center center / cover;
+}
+
+ion-list {
+  background: rgba(255, 255, 255, 0.1); /* Fondo transparente */
+}
+
 ion-card {
-    margin: 10px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  ion-card-title {
-    font-size: 1.4em;
-    font-weight: bold;
-  }
-  
-  ion-card-content p {
-    margin: 5px 0;
-  }
-  
+  margin: 10px;
+  border-radius: 10px;
+  background: rgba(128, 128, 128, 0.878); /* Fondo transparente */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+ion-card:hover {
+  transform: scale(1.05);
+}
+
+ion-card-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: white; /* Títulos en blanco */
+}
+
+ion-card-content p {
+  margin: 10px 0;
+  font-size: 1em;
+  color: white; /* Texto en blanco para mejor contraste */
+}
+
+ion-button {
+  margin-top: 10px;
+  font-size: 1.1em;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
+
+ion-button:hover {
+  background-color: var(--ion-color-dark);
+}
+
+ion-button ion-icon {
+  margin-right: 8px;
+}
+
+ion-header {
+  --background: var(--ion-color-primary);
+}
+
+ion-toolbar {
+  --background: var(--ion-color-primary);
+}
+
+.action-buttons {
+  margin-top: 20px;
+}
+
