--- a/AppRecetas/src/app/pages/crear-receta/crear-receta.page.html
+++ b/AppRecetas/src/app/pages/crear-receta/crear-receta.page.html
@@ -34,7 +34,7 @@
       <ion-button expand="block" type="submit" [disabled]="!recipeForm.valid">
         Guardar Receta
       </ion-button>
-      <ion-button expand="full" routerLink="/recipe-list">Volver</ion-button>
+      <ion-button expand="full" routerLink='/tabs/misRecetas'>Volver</ion-button>
     </form>
 
   </div>
