--- a/AppRecetas/src/app/pages/delete-recipe/delete-recipe.page.html
+++ b/AppRecetas/src/app/pages/delete-recipe/delete-recipe.page.html
@@ -15,7 +15,7 @@
       <ion-button expand="block" type="submit" [disabled]="!recipeForm.valid">
         Eliminar Receta
       </ion-button>
-      <ion-button expand="full" routerLink="/recipe-list">Volver</ion-button>
+      <ion-button expand="full" routerLink='/tabs/misRecetas'>Volver</ion-button>
     </form>
 
   </div>
