--- a/AppRecetas/src/app/pages/update-recipe/update-recipe.page.html
+++ b/AppRecetas/src/app/pages/update-recipe/update-recipe.page.html
@@ -54,7 +54,7 @@
           </ion-text>
 
           <ion-button expand="block" type="submit" [disabled]="formularioReceta.invalid">Modificar Receta</ion-button>
-          <ion-button expand="block" routerLink="/recipe-list" >Volver</ion-button>
+          <ion-button expand="block" routerLink='/tabs/misRecetas' >Volver</ion-button>
         </form>
       </ion-col>
     </ion-row>
